--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -3,23 +3,28 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alec's Software Skills</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Skills</title>
 </head>
 
 <body>
-    <h1>Skills</h1>
+    <h1>Skills as of <%= time %>
+    </h1>
     <ul>
         <% skills.forEach(function(s) { %>
             <li>
-                <%= s.skill %>
-                    -
-                    <%= s.ability ? 'Exceptional' : 'Good' %>
+
+                <a href="/skills/<%= s.id %>">
+                    <%= s.skill %>
+                </a>
+                -
+                <%= s.ability ? 'Exceptional' : 'Good' %>
             </li>
             <% }); %>
     </ul>
+    <a href="/skills/new">Add skill</a>
 </body>
 
 </html>
